[package]
name = "rynzland"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
base-x = "0.2.11"
cmd_lib = "2.0.0"
pathdiff = "0.2.3"
reqwest = "0.13.1"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.22"

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
trivial_numeric_casts = "warn"
# unsafe_code = "forbid"
unused_allocation = "warn"

[lints.clippy]
dbg_macro = "warn"
nursery = "warn"
pedantic = "warn"
todo = "warn"
