[package]
name = "rynzland"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
base-x = "0.2.11"
ureq = { version = "3.1.4", features = ["platform-verifier", "socks-proxy"] }
tempfile = "3.24.0"
toml = "0.9.11"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.22"
twox-hash = "2.1.2"

[target."cfg(unix)".dependencies]
pathdiff = "0.2.3"

[target."cfg(windows)".dependencies]
junction = "1.4.1"

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
trivial_numeric_casts = "warn"
# unsafe_code = "forbid"
unused_allocation = "warn"

[lints.clippy]
dbg_macro = "warn"
nursery = "warn"
pedantic = "warn"
todo = "warn"
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }

[dev-dependencies]
serial_test = "3.3.1"
